--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.6.0",
+    "cors": "^2.8.5",
     "dompurify": "^3.1.6",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
